major refactoring; introduced overall index

--- a/layout-modell-block/index.html
+++ b/layout-modell-block/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Layout-Modell</title>
-    <link rel="stylesheet" href="stylesheets/base.css" type="text/css">
+    <title>Layout von Block-Elementen</title>
+    <link rel="stylesheet" href="../common/base.css" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <style type="text/css">
-      
-    </style>
   </head>
-  <body class="index">
-    <h1>Layout-Modell</h1>
+  <body>
+    <h1>Layout von Block-Elementen</h1>
     <ul>
       <li><a href="sections/box_model.html">Box Model</li>
       <li><a href="sections/horizontal_formatting.html">Horizontale Formatierung</a></li>
