--- a/layout-modell-inline/index.html
+++ b/layout-modell-inline/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Kapitel</title>
-    <link rel="stylesheet" href="stylesheets/base.css" type="text/css">
+    <title>Layout von Inline-Elementen</title>
+    <link rel="stylesheet" href="../common/base.css" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <style type="text/css">
-      
-    </style>
   </head>
-  <body class="index">
-    <h1>Kapitel</h1>
+  <body>
+    <h1>Layout von Inline-Elementen</h1>
     <ul>
-      <li><a href="sections/section.html">Abschnitt</li>
+      <li><a href="sections/inline-non-replaced.html">Nicht ersetzt</li>
     </ul>
   </body>
 </html>
