--- a/layout-modell-inline/sections/inline-non-replaced.html
+++ b/layout-modell-inline/sections/inline-non-replaced.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Inline non-replaced Elemente</title>
-    <link rel="stylesheet" href="../stylesheets/base.css" type="text/css">
+    <link rel="stylesheet" href="../../common/base.css" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <style type="text/css">
       .demo {
