--- a/font-und-text/index.html
+++ b/font-und-text/index.html
@@ -2,25 +2,20 @@
 <html>
   <head>
     <title>Font &amp; Text</title>
-    <link rel="stylesheet" href="stylesheets/base.css" type="text/css">
+    <link rel="stylesheet" href="../common/base.css" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <style type="text/css">
-      
-    </style>
   </head>
   <body>
-    <div id="content">
-      <h1>Font &amp; Text</h1>
-      <ul>
-        <li>font-family</li>
-        <li>font-weight</li>
-        <li>font-size</li>
-        <li>font-variant</li>
-        <li><a href="pages/text-indent.html">text-indent</li>
-        <li><a href="pages/text-align.html">text-align</li>
-        <li><a href="pages/line-height.html">line-height</a></li>
-        <li><a href="pages/vertical-align.html">vertical-align</a></li>
-      </ul>
-    </div>
+    <h1>Font &amp; Text</h1>
+    <ul>
+      <li>font-family</li>
+      <li>font-weight</li>
+      <li>font-size</li>
+      <li>font-variant</li>
+      <li><a href="sections/text-indent.html">text-indent</li>
+      <li><a href="sections/text-align.html">text-align</li>
+      <li><a href="sections/line-height.html">line-height</a></li>
+      <li><a href="sections/vertical-align.html">vertical-align</a></li>
+    </ul>
   </body>
 </html>
