--- a/layout-modell-block/sections/vertical_formatting.html
+++ b/layout-modell-block/sections/vertical_formatting.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Vertikale Formatierung</title>
-    <link rel="stylesheet" href="../stylesheets/base.css" type="text/css">
+    <link rel="stylesheet" href="../../common/base.css" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <style type="text/css">
       p.demo {
