--- a/layout-modell-inline/sections/inline-non-replaced.html
+++ b/layout-modell-inline/sections/inline-non-replaced.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Inline non-replaced Elemente</title>
+    <title>Nicht-ersetzte Inline-Elemente</title>
     <link rel="stylesheet" href="../../common/base.css" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <style type="text/css">
@@ -11,7 +11,7 @@
     </style>
   </head>
   <body>
-    <h1>Inline non-replaced Elemente</h1>
+    <h1>Nicht-ersetzte Inline-Elemente</h1>
     <p>
       Der Inhaltsbereich eines Inline-Elementes (grauer Hintergrund) entspricht in der 
       Vertikalen der Höhe aller <i>em boxes</i>. Die Höhe des Inhalts ist somit abhängig von der
