--- a/layout-modell-inline/index.html
+++ b/layout-modell-inline/index.html
@@ -9,6 +9,7 @@
     <h1>Layout von Inline-Elementen</h1>
     <ul>
       <li><a href="sections/inline-non-replaced.html">Nicht ersetzt</li>
+      <li><a href="sections/inline-replaced.html">Ersetzt</li>
     </ul>
   </body>
 </html>
