--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li><a href="font-und-text/index.html">Font &amp; Text</a></li>
         <li><a href="layout-modell-block/index.html">Layout von Block-Elementen</a></li>
         <li><a href="layout-modell-inline/index.html">Layout von Inline-Elementen</a></li>
+        <li><a href="layout-modell-andere/index.html">Weitere Layout-Typen</a></li>
       </ul>
   </body>
 </html>
