added notice about git repository

--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
         <li><a href="layout-modell-inline/index.html">Layout von Inline-Elementen</a></li>
         <li><a href="layout-modell-andere/index.html">Weitere Layout-Typen</a></li>
       </ul>
+      <p>
+        Es empfiehlt sich die Beispiele mit Hilfe von git gesammelt herunterzuladen:
+      </p>
+      <code>
+        git clone gitosis@laforge.tknetwork.de:dhbw-demos.git
+      </code>
   </body>
 </html>
