--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="layout-modell-block/index.html">Layout von Block-Elementen</a></li>
         <li><a href="layout-modell-inline/index.html">Layout von Inline-Elementen</a></li>
         <li><a href="layout-modell-andere/index.html">Weitere Layout-Typen</a></li>
+        <li><a href="floating-und-positionierung/index.html">Floating und Positionierung</a></li>
       </ul>
       <p>
         Es empfiehlt sich die Beispiele mit Hilfe von git gesammelt herunterzuladen:
