added position demos

--- a/floating-und-positionierung/index.html
+++ b/floating-und-positionierung/index.html
@@ -9,6 +9,16 @@
     <h1>Floating und Positionierung</h1>
     <ul>
       <li><a href="sections/floating.html">Floating</li>
+      <li>
+        <a href="sections/position_overview.html">Positionierung</a>
+        <ul>
+          <li>Relativ</li>
+          <li>
+            <a href="sections/position_absolute.html">Absolut</a>
+          </li>
+          <li>Fixiert</li>
+        </ul>
+      </li>
     </ul>
   </body>
 </html>
