--- a/floating-und-positionierung/sections/floating.html
+++ b/floating-und-positionierung/sections/floating.html
@@ -140,7 +140,7 @@
       Text, der über<br>
       mehrere Zeilen
 
-      <div class="demo small-box">float</div>
+      <div class="demo small-box" style="float: left">float</div>
 
       läuft und läuft<br>
       und läuft…
