Better distinguish code from important terms

--- a/floating-und-positionierung/sections/floating.html
+++ b/floating-und-positionierung/sections/floating.html
@@ -33,8 +33,8 @@
   <body>
     <h1>Floating</h1>
     <p>
-      Inhalt umfließt Elemente mit der Eigenschaft <i>float</i> (engl. schweben). Der Wert gibt an, ob der
-      umgebende Inhalt rechts (<i>float: left</i>) oder links (<i>float: right</i>) umfließt.
+      Inhalt umfließt Elemente mit der Eigenschaft <code>float</code> (engl. schweben). Der Wert gibt an, ob der
+      umgebende Inhalt rechts (<code>float: left</code>) oder links (<code>float: right</code>) umfließt.
     </p>
     <div class="demo">
       Cascading Style Sheets (Abk.: CSS, [kæsˌkeɪdɪŋˈstaɪlʃiːts]) ist eine deklarative Stylesheet-Sprache
@@ -72,7 +72,7 @@
       </p>
     </div>
     <p>
-      Prinzipiell kann in CSS jedes Element die Eigenschaft <i>float</i> tragen, d.h. umflossen werden –
+      Prinzipiell kann in CSS jedes Element die Eigenschaft <code>float</code> tragen, d.h. umflossen werden –
       auch Inline-Elemente. Umflossene Elemente generieren immer eine Box, d.h. werden als Block-Elemente
       interpretiert. Die tatsächliche Breite von nicht ersetzten Elementen ist undefiniert und
       sollte daher explizit gesetzt werden. Ansonsten wird eine Mindestbreite angenommen.
@@ -160,7 +160,7 @@
       gibt es eine Reihe von Tricks.
     </p>
     <p>
-      Die Eigenschaft <i>clear</i> mit dem Wert <i>both</i> zwingt ein Element auf eine neue Zeile.
+      Die Eigenschaft <code>clear</code> mit dem Wert <code>both</code> zwingt ein Element auf eine neue Zeile.
       Platziert man ein Element mit dieser Eigenschaft an das Ende des Containers, so bestimmt dieses
       (nicht umfließende) Element das untere Ende.
     </p>
@@ -174,7 +174,7 @@
     </div>
     <p>
       Der Nachteil des obigen Tricks ist, dass ein zusätzliches Element im Markup benötigt wird. Durch
-      intelligenten Einsatz von Pseudo-Selektoren und Verwendung der Eigenschaft <i>content</i> lässt sich
+      intelligenten Einsatz von Pseudo-Selektoren und Verwendung der Eigenschaft <code>content</code> lässt sich
       das notwendige Element dynamisch erzeugen.
     </p>
     <!-- Siehe .clearfix -->
