--- a/floating-und-positionierung/sections/position_absolute.html
+++ b/floating-und-positionierung/sections/position_absolute.html
@@ -33,7 +33,7 @@
       vorzuweisen.
     </p>
     <p>
-      Ist eine Offset-Eigenschaft nicht angegeben, wird <i>auto</i> angenommen. Auto ist
+      Ist eine Offset-Eigenschaft nicht angegeben, wird <code>auto</code> angenommen. Auto ist
       nicht gleich zu setzen mit 0, sondern steht für eben den Offset, den das Element im
       normal flow besitzen würde.
     </p>
@@ -54,7 +54,7 @@
       Eigenschaften nehmen Einfluß auf die Größeneinstellung.
     </p>
     <p>
-      Explizite Angabe der Breite (Eigenschaft <i>width</i>).
+      Explizite Angabe der Breite (Eigenschaft <code>width</code>).
     </p>
     <div class="demo box">
       <div style="position: absolute; right: 0; width: 50px"></div>
