--- a/layout-modell-andere/sections/inline_block.html
+++ b/layout-modell-andere/sections/inline_block.html
@@ -40,7 +40,7 @@
     </div>
     <p>
       Inline-Elemente erzeugen zwar keinen Zeilenumbruch, aber Eigenschaften wie
-      <i>width</i> und <i>height</i> wirken sich nicht aus.
+      <code>width</code> und <code>height</code> wirken sich nicht aus.
     </p>
     <div>
       Eine
@@ -48,7 +48,7 @@
       gewöhnliche Zeile.
     </div>
     <p>
-      <i>inline-block</i> Elemente sind ein Hybrid aus Block- und Inline-Elementen.
+      <code>inline-block</code> Elemente sind ein Hybrid aus Block- und Inline-Elementen.
       Bezogen auf den Inhalt, verhalten sie sich wie Block-Elemente, d.h. es gilt
       das Box-Modell.
     </p>
