--- a/layout-modell-andere/sections/run_in.html
+++ b/layout-modell-andere/sections/run_in.html
@@ -13,7 +13,7 @@
   <body>
     <h1>Run-In</h1>
     <p>
-      Mit dem Layout-Typ <i>run-in</i> lassen sich interessante typografische Effekte
+      Mit dem Layout-Typ <code>run-in</code> lassen sich interessante typografische Effekte
       ohne Änderung des Markups erzielen. Ausgehend von:
     </p>
     <div class="demo">
