--- a/layout-modell-block/sections/box_model.html
+++ b/layout-modell-block/sections/box_model.html
@@ -24,7 +24,7 @@
     </p>
     <p>
       Es gilt: Der Außenabstand kann negativ sein. Alle anderen Eigenschaften
-      nehmen nur positive Werte oder das Schlüsselwort <i>auto</i> an.
+      nehmen nur positive Werte oder das Schlüsselwort <code>auto</code> an.
     </p>
     <img src="../images/box-model.png">
     <p>
