--- a/layout-modell-block/sections/vertical_formatting.html
+++ b/layout-modell-block/sections/vertical_formatting.html
@@ -29,9 +29,9 @@
       <li>margin-bottom</li>
     </ul>
     <p>
-      Ausschließlich height, <i>margin-top</i> sowie <i>margin-bottom</i> akzeptieren das
-      Schlüsselwort <i>auto</i>, alle anderen Eigenschaften erwarten einen expliziten Wert.
-      Im Regelfall entspricht für <i>margin-*</i> <i>auto</i> dem Wert <i>0</i>.
+      Ausschließlich height, <code>margin-top</code> sowie <code>margin-bottom</code> akzeptieren das
+      Schlüsselwort <code>auto</code>, alle anderen Eigenschaften erwarten einen expliziten Wert.
+      Im Regelfall entspricht für <code>margin-*</code> <code>auto</code> dem Wert <code>0</code>.
     </p>
     <h2>Höhe</h2>
     <p class="demo">
@@ -45,7 +45,7 @@
       Hier ist die gesetzte Höhe kleiner als der Inhalt.<br>
       Wie der Inhalt dargestellt wird,<br>
       ist von einer weiteren Eigenschaften<br>
-      (<i>overflow</i>) abhängig.
+      (<code>overflow</code>) abhängig.
     </p>
     <h2>Bleeding</h2>
     <p>
@@ -76,7 +76,7 @@
     </div>
     <p>
       Die Situation ändert sich, sobald das Element mindestens die Eigenschaft
-      <i>border</i> oder <i>padding</i> gesetzt hat.
+      <code>border</code> oder <code>padding</code> gesetzt hat.
     </p>
     <h2>Überlappende Abstände</h2>
     <p>
