--- a/layout-modell-inline/sections/inline-replaced.html
+++ b/layout-modell-inline/sections/inline-replaced.html
@@ -74,7 +74,7 @@
     </p>
     <p>
        Ein Lösungsansatz ist, Bilder auf
-      <i>display: block</i> zu setzen um damit die geltenden Layout-Regeln zu ändern.
+      <code>display: block</code> zu setzen um damit die geltenden Layout-Regeln zu ändern.
     </p>
     <p class="demo" style="width: 100px; font-size: 30px;">
       <img src="../images/smiley-small.png" style="display: block">
