--- a/layout-modell-block/sections/horizontal_formatting.html
+++ b/layout-modell-block/sections/horizontal_formatting.html
@@ -46,7 +46,7 @@
         Der Absatz ist 300 px breit, obwohl keine Breite festgelegt ist.
       </p>
       <p style="width: auto;">
-        Im oberen Fall setzt der Browser implizit <i>width: auto</i>.
+        Im oberen Fall setzt der Browser implizit <code>width: auto</code>.
         Erfolgt dies explizit, ist das Resultat identisch.
       </p>
       <p style="width: 400px;">
@@ -65,13 +65,13 @@
         Dieser Absatz ist 200px breit.
       </p>
       <p style="margin-left: 100px;">
-        Der Browser setzt nicht explizit definierte Werte (<i>auto</i>) im Sinne
+        Der Browser setzt nicht explizit definierte Werte (<code>auto</code>) im Sinne
         der Einhaltung der Breiten-Regel. Dabei gilt, dass immer zuerst die
         Breite „aufgefüllt“ wird.
       </p>
       <p style="width: 200px; margin-left: auto; margin-right: auto;">
         Ist die Breite gesetzt und stehen beide horizontalen Außenabstände
-        auf <i>auto</i>, verteilt der Browser die übrige Breite gleichmäßig auf die
+        auf <code>auto</code>, verteilt der Browser die übrige Breite gleichmäßig auf die
         Außenabstände (hier jeweils 50px).
       </p>
       <p style="width: 75%; margin-left: auto; margin-right: auto;">
@@ -104,7 +104,7 @@
         Die Breite kann überschrieben werden. Dabei passt der Browser die Höhe
         maßstabsgerecht an.
       </p>
-      <p>Achtung: Bilder sind standardmäßig <i>display: inline</i>.</p>
+      <p>Achtung: Bilder sind standardmäßig <code>display: inline</code>.</p>
     </div>
   </body>
 </html>
