Added headings for improved readability

--- a/floating-und-positionierung/sections/floating.html
+++ b/floating-und-positionierung/sections/floating.html
@@ -54,6 +54,7 @@
       Auszeichnung von Teilen eines Dokuments.
       <!-- http://de.wikipedia.org/wiki/Cascading_Style_Sheets, CC BY-SA 3.0 -->
     </div>
+    <h2>Regeln</h2>
     <p>
       Die Außenabstände von umflossenen Elementen werden nicht zusammengefasst (kein Margin-Collapsing).
     </p>
@@ -153,6 +154,7 @@
       läuft und läuft<br>
       und läuft…
     </div>
+    <h2>Containment</h2>
     <p>
       Floating nimmt Elemente aus dem Dokumentfluss. Umfließende Elemente tragen daher nicht ohne Weiteres
       zur Höhe des Eltern-Elements bei. Problematisch ist dies insbesondere, wenn das Eltern-Element eine
