Improved description of bleeding

--- a/layout-modell-block/sections/vertical_formatting.html
+++ b/layout-modell-block/sections/vertical_formatting.html
@@ -60,9 +60,9 @@
       </p>
     </div>
     <p>
-      Das obige Beispiel zeigt, dass die äußeren Abstände bei der automatischen Berechnung
-      der Höhe nicht berücksichtigt werden. Statt dessen fasst der Browser den
-      Abstand mit dem Außenabstand des Elementes zusammen (siehe auch unten).
+      Das obige Beispiel zeigt, dass die (vertikalen) äußeren Abstände bei der automatischen
+      Berechnung der Höhe nicht berücksichtigt werden. Statt dessen fasst der Browser diese
+      Abstände mit den Außenabständen des Elementes zusammen (siehe auch unten).
       Dies erklärt den unerwarteten Abstand zwischen Absatz und Beispiel ebenso wie die
       überraschend kleine Box.
     </p>
