Another minor enhancement

--- a/layout-modell-inline/sections/inline-non-replaced.html
+++ b/layout-modell-inline/sections/inline-non-replaced.html
@@ -34,7 +34,7 @@
     </span>
     <p>
       Innenabstand, Rand und Außenabstand von nicht ersetzten Elementen tragen allerdings
-      nicht zur Höhe des Elementes bei.
+      nicht zur Höhe der Zeile bei.
     </p>
     <span class="demo" style="padding-bottom: 10px; background-color: #dee">Eine Zeile.</span>
     <br>
