--- a/layout-modell-inline/sections/inline-non-replaced.html
+++ b/layout-modell-inline/sections/inline-non-replaced.html
@@ -49,7 +49,7 @@
     <p>
       Ein Inline-Element, das aufgrund seiner Breite automatisch umbrochen wird.
     </p>
-    <span style="border: 1px solid black">
+    <span style="border: 1px solid black;">
       Eine sehr lange Zeile. Eine sehr lange Zeile. Eine sehr lange Zeile. Eine sehr lange Zeile.
       Eine sehr lange Zeile. Eine sehr lange Zeile. Eine sehr lange Zeile. Eine sehr lange Zeile.
       Eine sehr lange Zeile. Eine sehr lange Zeile. Eine sehr lange Zeile. Eine sehr lange Zeile.
