--- a/floating-und-positionierung/index.html
+++ b/floating-und-positionierung/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Floating und Positionierung</h1>
     <ul>
-      <li><a href="sections/floating.html">Floating</li>
+      <li><a href="sections/floating.html">Floating</a></li>
       <li>
         <a href="sections/position_overview.html">Positionierung</a>
         <ul>
