Fix link, add zip download

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
         Es empfiehlt sich die Beispiele mit Hilfe von git gesammelt herunterzuladen:
       </p>
       <code>
-        git clone gitosis@laforge.tknetwork.de:dhbw-demos.git
+        git clone https://github.com/trkoch/css-demos.git
       </code>
+      <p>
+        Alternativ kann eine
+        <a href="https://github.com/trkoch/css-demos/archive/master.zip">ZIP-Datei</a>
+        heruntergeladen werden.
+      </p>
   </body>
 </html>
